[package]
name = "eve"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
env_logger = "0.11.7"
futures = "0.3.31"
http = "1.3.1"
lazy_static = "1.5.0"
log = "0.4.26"
oauth2 = "5.0.0"
open = "5.3.2"
pprof = { version = "0.15.0", features = ["flamegraph"] }
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-middleware = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tower-sessions = "0.14.0"
uuid = { version = "1.17.0", features = ["v4"] }

[profile.dev]
# rustflags = ["-A", "unused_variables", "-A", "unused_imports"]
# rustflags = ["-A", "dead_code"]
